--- a/frontend/src/Home/index.css
+++ b/frontend/src/Home/index.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
  }
-  .contet{
+  .content{
     width: 100%;
     height: 80%;
     display: flex;
@@ -39,6 +39,7 @@
   .userImg{
     width: 120px;
     height: 120px;
+    border-radius: 20px;
   }
   .footer{
     display: flex;
@@ -60,6 +61,8 @@
     outline: transparent;
     margin: 0 10px 0 10px;
     border-radius: 50%;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   .ant-modal .ant-modal-content {
     background-color: #282c34;
@@ -71,4 +74,14 @@
   }
   .anticon-close{
     color: white;
+  }
+
+  #userImgInput {
+    width: 100%;
+    margin: 20px auto;
+  }
+
+  Input#userImgInput {
+    width: 100%;
+    margin: 20px auto;
   }
