--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,6 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 1920;
+  margin: 0;
   text-align: center;
 }
 
@@ -17,6 +16,9 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+
+.container {
+  min-width: 99vw;}
 
 @keyframes logo-spin {
   from {
