--- a/frontend/src/Pages/HomePage/index.css
+++ b/frontend/src/Pages/HomePage/index.css
@@ -1,43 +1,46 @@
 .App-header {
   /* background-image: url('./../Asstes/bg.png'); */
-  background-size: 100% 100%;
-  background: mediumorchid;
-  height: 100%;
+  background-color: peachpuff;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.body{
+  width: max-content;
+}
+
 .content {
-  width: 100%;
-  height: 80%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
   flex-direction: column;
-  padding: 20px;
+  padding: 5vh;
+  width: max-content;
 }
 
 #userInfoHolder {
-  display: "flex";
-  align-items: "center";
-  justify-content: "center";
-  flex-direction: 'column';
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   width: auto;
 }
 
+
+
 #userInfoInnerHolder{ 
-  display: 'flex';
-  align-items: "center"; 
-  justify-content: "center";
-  flex-direction: 'column';
-  width: '100%' }
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  flex-direction: column;
+  }
 
 #UserName {
   font-size: 20px;
@@ -45,57 +48,27 @@
   background-color: yellow;
   color: #000;
   border-radius: 10px;
-  padding:"30px";
-  margin-bottom:"100px";
+  padding: 30px;
+  margin-bottom: 100px;
 }
 
 .logo {
-  width: 300px;
-  height: 10px;
+  margin-bottom: 100px;
+  overflow: hidden;
+
+} 
+
+#logoTitle {
   font-size: 50px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  /* background-color: rgba(54, 56, 58, 1); */
-  border-radius: 50%;
+  font-weight: bold;
+  margin-bottom: 100px;
 }
 
 .input {
-  width: 30%;
-}
-
-.userImg {
-  width: 120px;
-  height: 120px;
-  border-radius: 20px;
-}
+  width: 50%;
+} 
 
 
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.button_sb {
-  width: 250px;
-  height: 78px;
-  font-size: 24px;
-  /* background: linear-gradient(45deg,transparent 5%, #00ff00 5%); */
-  background: springgreen;
-  border: 0;
-  color: #000;
-  letter-spacing: 3px;
-  line-height: 24px;
-  /* box-shadow: 6px 0px 0px #0066ff; */
-  outline: transparent;
-  margin: 0 10px 0 10px;
-  border-radius: 50%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
 
 .ant-modal .ant-modal-content {
   background-color: #282c34;
