--- a/frontend/src/Pages/LobbyPage/index.css
+++ b/frontend/src/Pages/LobbyPage/index.css
@@ -1,4 +1,7 @@
 body {
     background: linear-gradient(to right, rgb(122, 14, 136), rgb(180, 27, 134), rgb(150, 28, 44));
-    
+}
+
+.room-code {
+    justify-content: center;
 }
