--- a/frontend/src/Pages/LobbyPage/index.css
+++ b/frontend/src/Pages/LobbyPage/index.css
@@ -5,3 +5,9 @@ body {
 .room-code {
     justify-content: center;
 }
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
