--- a/frontend/src/Pages/GameResultsPage/index.css
+++ b/frontend/src/Pages/GameResultsPage/index.css
@@ -30,7 +30,7 @@
     height: 50px;
 }
 
-.Results_content {
+/* .Results_content {
     padding: 0 50px;
     color: #ffffff;
 }
@@ -77,7 +77,7 @@
     width: 50px;
     height: 50px;
     margin: 30px;
-}
+} */
 
 .Results_bottom {
     text-align: center;
@@ -90,7 +90,7 @@
     border-radius: 48%;
     display: inline-block;
 }
-
+/* 
 .Results_content_bot li span:nth-of-type(2) {
     display: inline-block;
     width: 150px;
@@ -123,4 +123,4 @@
 .Results_content_item:nth-of-type(2) p:nth-of-type(3) {
     height: 150px;
     line-height: 150px;
-}
+} */
