--- a/frontend/src/components/playerPodiumResults.css
+++ b/frontend/src/components/playerPodiumResults.css
@@ -1,38 +1,53 @@
-.stage {
-    transform: rotate(90deg);
+.podium-container {
+    display: flex;
+    transform: scale(1.5);
+    margin:0px;
+    padding: 0px;
 
-}
 
+  }
+  
+  .Podium-First,
+  .Podium-Second,
+  .Podium-Third {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* align avatar and podium image center */
 
-.container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-        ". . ."
-        "Second First Third"
-        "Podium Podium Podium";
-    justify-content: center;
-    align-items: center;
-}
+  }
+  
+  .stage {
+    width: 500px;
+  }
 
-.Podium {
-    grid-area: Podium;
-}
+  .Podium-Second {
+    position: relative;
+    top: 29px;
+    right: -407px; /* adjust the value as needed */
+  }
 
-.First {
-    grid-area: First;
-    width:50px;
-}
+  .Podium-Third{
+    position: relative;
+    top: 29px;
+    left: -333px; /* adjust the value as needed */
+  }
 
-.Second {
-    grid-area: Second;
-    width:50px;
-}
+  .user{
+    width: 50px;
+    height: 50px;
+  }
 
-.Third {
-    grid-area: Third;
-    width:50px;
-}
+  .second{
+    position: relative;
+    right: 30px;
+    top:30px;
+  }
+  .first{
+    position: relative;
+    right: -10px;
+  }
+  .third{
+    position: relative;
+    right: 30px;
+    top:60px;
+  }
