--- a/frontend/src/Pages/RoundResultsPage/index.css
+++ b/frontend/src/Pages/RoundResultsPage/index.css
@@ -1,19 +1,70 @@
-ul{
-    padding: 0;
+.page-container {
+  padding: 0px;
+  margin: 0px;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  bottom: 0px;
+  position: absolute;
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr; 
+  gap: 0px 0px; 
+  grid-auto-flow: row;
+  grid-template-areas:
+    "page-header page-header page-header page-header"
+    "first-place first-place first-place first-place"
+    ". second-place second-place second-place"
+    ". . third-place third-place "
+    "page-footer page-footer page-footer page-footer";
 }
-.App-GamePage{
-    width: 900px; height: 750px; margin: auto; background: #4349d9;
+
+
+.first-place {
+  grid-area: first-place;
+  background-color: red;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
-.game_header{
-    position: relative; width: 100%;color:#fff;
+
+.second-place {
+  grid-area: second-place;
+  background-color: blue;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
-.game_header img{
-    position: absolute; right: 10px; top: 10px ;width:50px;height:50px;
+
+.third-place {
+  grid-area: third-place;
+  background-color: green;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
-.game_content li{
-    display: flex; align-items: center; justify-content: flex-end; padding: 10px 30px;
+
+.player-profile {
+  max-width: 100%;
+  max-height: 100%;
 }
-.game_content li .imgUser{
-    margin: 0 40px 0 150px; text-align: center;
+
+.first-place .player-profile {
+  transform: scale(1.3);
 }
-  
+
+.second-place .player-profile {
+  transform: scale(0.9);
+}
+
+.third-place .player-profile {
+  transform: scale(.6);
+}
+
+.page-footer {
+  grid-area: page-footer;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+}
