--- a/frontend/src/Pages/GamePage/index.css
+++ b/frontend/src/Pages/GamePage/index.css
@@ -146,7 +146,7 @@ img {
 
 .TimerIcon {
     grid-area: TimerIcon;
-{/*
+}/*
 ul{
     padding: 0;
 }
@@ -166,4 +166,4 @@ ul{
     margin: 0 40px 0 150px; text-align: center;
 
 }
-*/}
+*/
