--- a/frontend/src/Pages/RoundResultsPage/index.css
+++ b/frontend/src/Pages/RoundResultsPage/index.css
@@ -1,70 +1,95 @@
 .page-container {
-  padding: 0px;
-  margin: 0px;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  bottom: 0px;
-  position: absolute;
-  display: grid; 
-  grid-template-columns: 1fr 1fr 1fr 1fr; 
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr; 
-  gap: 0px 0px; 
-  grid-auto-flow: row;
-  grid-template-areas:
-    "page-header page-header page-header page-header"
-    "first-place first-place first-place first-place"
-    ". second-place second-place second-place"
-    ". . third-place third-place "
-    "page-footer page-footer page-footer page-footer";
+    padding: 0px;
+    margin: 0px;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    bottom: 0px;
+    position: absolute;
+    background-color: coral;
+
 }
 
+.page-header {
+    width: 100%;
+    background-color: red;
+}
 
 .first-place {
-  grid-area: first-place;
-  background-color: red;
-  display: flex;
-  justify-content: left;
-  align-items: center;
+    display:flex;
+    background-color: cornflowerblue;
+    width: 50%;
 }
 
 .second-place {
-  grid-area: second-place;
-  background-color: blue;
-  display: flex;
-  justify-content: left;
-  align-items: center;
+    display:flex;
+    background-color: rgb(184, 194, 53);
+    width: 50%;
 }
 
 .third-place {
-  grid-area: third-place;
-  background-color: green;
-  display: flex;
-  justify-content: left;
-  align-items: center;
+    display:flex;
+    background-color: rgb(48, 218, 48);
+    width: 50%;
 }
 
-.player-profile {
-  max-width: 100%;
-  max-height: 100%;
+.first-medal {
+    scale: 0.5;
+    align-self: right;
+    margin:0;
 }
+
+.second-medal {
+    scale: 0.5;
+}
+
+.third-medal {
+    scale: 0.5;
+}
+
+/* .first-place {
+    grid-area: first-place;
+    background-color: red;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.second-place {
+    grid-area: second-place;
+    background-color: blue;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.third-place {
+    grid-area: third-place;
+    background-color: green;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.player-profile {}
 
 .first-place .player-profile {
-  transform: scale(1.3);
+    transform: scale(0.5);
 }
 
 .second-place .player-profile {
-  transform: scale(0.9);
+    transform: scale(0.5);
 }
 
 .third-place .player-profile {
-  transform: scale(.6);
+    transform: scale(0.5);
 }
 
 .page-footer {
-  grid-area: page-footer;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-}
+    display: flex;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+} */
+
