--- a/frontend/src/Pages/RoundResultsPage/index.css
+++ b/frontend/src/Pages/RoundResultsPage/index.css
@@ -7,45 +7,88 @@
     bottom: 0px;
     bottom: 0px;
     position: absolute;
-    background-color: coral;
+    opacity: 0.99;
 
 }
 
 .page-header {
     width: 100%;
-    background-color: red;
 }
 
 .first-place {
     display:flex;
-    background-color: cornflowerblue;
-    width: 50%;
+    background: linear-gradient(to right, #ffc219, rgb(197, 167, 84), rgb(66, 55, 55));
+    width: 97.5%;
+    height: 30vh;
+    margin-left: 5vh;
+    border-radius: 20px;
+    box-shadow: 80px, 80px yellow;
 }
 
 .second-place {
     display:flex;
-    background-color: rgb(184, 194, 53);
-    width: 50%;
+    background: linear-gradient(to right, #CCCCCC, rgb(158, 137, 137), rgb(66, 55, 55));
+    width: 80%;
+    height: 26vh;
+    margin-left: 40vh;
+    opacity: 95%;
+    z-index: 0 !important;
+    
+    border-radius: 20px;
 }
 
 .third-place {
     display:flex;
-    background-color: rgb(48, 218, 48);
-    width: 50%;
+    background: linear-gradient(to right, #e8a240,rgb(113, 87, 53), rgb(94, 99, 85));
+    width: 100%;
+    height: 22vh;
+    margin-left: 70vh;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+    z-index: -2 !important;
+    border-radius: 20px;
+    
 }
 
 .first-medal {
     scale: 0.5;
-    align-self: right;
-    margin:0;
+    opacity: 100%;
+    margin-left: 10vh;
+    float:left;
 }
 
 .second-medal {
     scale: 0.5;
+    opacity: 100%;
+    margin-left: 10vh;
+    float:left;
 }
 
 .third-medal {
     scale: 0.5;
+    opacity: 100%;
+    margin-left: 10vh;
+    float:left;
+}
+
+.first-image {
+    padding: 40px; 
+    padding-left: 70px;
+    padding-top: 80px;
+    
+}
+
+.second-image {
+    padding: 40px; 
+}
+
+.third-image {
+    padding: 40px; 
+}
+
+p {
+    align-self: center;
+    margin-left: 10vh;
+    
 }
 
 /* .first-place {
