--- a/frontend/src/Login/index.css
+++ b/frontend/src/Login/index.css
@@ -1,16 +1,18 @@
-
 .login{
+    /* This class represents the login container */
     /* background-image: url('./../Asstes/bg.png'); */
     background-size: 100% 100%;
-    background: mediumorchid;
+    background: mediumorchid; /* Sets the background color to medium orchid */
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .loginfo{
-    background-color: rgba(253, 254, 254 , 0.7);
+    /* This class represents the login information container */
+    background-color: rgba(253, 254, 254 , 0.7); /* Sets the background color with transparency */
     width: 600px;
     height: 300px;
     border-radius: 10px;
@@ -19,12 +21,14 @@
     justify-content: center;
     flex-direction: column;
 }
+
 .button_sb{
+    /* This class represents a submit button */
     width: 250px;
     height: 48px;
     font-size: 24px;
     /* background: linear-gradient(45deg,transparent 5%, #00ff00 5%); */
-    background:springgreen;
+    background:springgreen; /* Sets the background color to spring green */
     border: 0;
     color: #000;
     letter-spacing: 3px;
@@ -33,7 +37,9 @@
     outline: transparent;
     margin: 0 10px 0 10px;
 }
+
 #horizontal_login{
+    /* This ID represents the horizontal login container */
     display: flex;
     align-items: center;
     justify-content: center;
