--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap');
 #root {
   max-width: 1920;
   max-height: 100vh;
@@ -23,3 +24,8 @@
   min-width: 99vw;}
 
 
+
+  body {
+    font-family: 'Irish Grover', cursive;
+  }
+  
