--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,7 @@
 
 .container::before {
   content: "";
-  background-image: url("./assets/image2.png");
+  background-image: url("./assets/background.png");
   background-size: cover;
   opacity: 0.2;
   position: absolute;
