--- a/frontend/src/Pages/HomePage/index.css
+++ b/frontend/src/Pages/HomePage/index.css
@@ -78,9 +78,20 @@
   padding:10px;
 }
 
+.ant-modal-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
 .ant-modal .ant-modal-content {
   background-color: #282c34;
   color: white;
+  max-width: 800px;
+  width: 100%;
+  text-align: center;
 }
 
 .ant-modal-title {
