--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,7 @@
   min-width: 99vw;
   height: 100%;
   width: 100%;
+  display:block;
 }
 
 .container::before {
@@ -29,6 +30,7 @@
 body {
   /* background: linear-gradient(to right, rgb(37, 151, 185), rgb(228, 210, 151)); */
   /* background-color: rgb(158, 92, 196) */
+  overflow: hidden;
   background: linear-gradient(to bottom, rgb(255, 246, 163), rgb(199, 143, 231));
     font-family: 'Irish Grover', cursive;
   }
