--- a/frontend/src/Pages/RatingsPage/index.css
+++ b/frontend/src/Pages/RatingsPage/index.css
@@ -1,4 +1,4 @@
-.container {
+.ratings-page-container {
   padding: 0px;
   margin: 0px;
   top: 0px;
@@ -23,7 +23,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
 }
 
 .rounds {
@@ -38,12 +37,24 @@
 }
 
 .current-index {
-  text-align: center;
   margin-top: 5px;
 }
+
+.index-text {
+justify-content: center;
+align-items: center;
+}
+
 .rating-container {
   grid-area: rating-container;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .container-footer {
   grid-area: container-footer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
