--- a/frontend/src/Pages/GamePage/index.css
+++ b/frontend/src/Pages/GamePage/index.css
@@ -6,7 +6,7 @@ html {
     height: 100%;
 }
 
-.game-page-container {
+.page {
     top:0;
     left:0;
     right:0;
@@ -18,7 +18,7 @@ html {
     gap: 10px 10px;
     grid-auto-flow: row;
     grid-template-areas:
-        "UserScore . . . . . Audio"
+        "Home . . . . . Audio"
         ". . . RoundHeader . . ."
         ". RoundImage RoundImage RoundImage Chatbox Chatbox ."
         ". RoundImage RoundImage RoundImage Chatbox Chatbox ."
@@ -27,14 +27,14 @@ html {
     
 }
 
-.RoundImage {   
+.RoundImage {
     grid-area: RoundImage;
 }
 
-.RoundImage img{
-    margin-left: 230px;
-    border-Radius: 25px;
-    border: 10px solid #6E8AA8;
+img {
+    width: "100px";
+    height: "100px";
+    border-Radius: "10px"
 }
 
 .Chatbox {
@@ -66,10 +66,6 @@ html {
 
 .PromptInput {
     grid-area: PromptInput;
-    justify-content: center;
-    align-items: center;
-    padding-top: 500px;
-    margin-top: 50px;
 }
 
 .Button {
@@ -77,18 +73,18 @@ html {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 0px 0px;
-    grid-auto-flow: column;
+    grid-auto-flow: row;
     grid-template-areas:
         "GuessButton GuessButton GuessButton"
         ". . ."
         ". . .";
     grid-area: Button;
-    justify-content: center;
-    align-items: center;
-}   
+}
 
+.GuessButton {
+    grid-area: GuessButton;
+}
 
-.GuessButton,
 .SubmitButton {
     display: flex;
     align-items: center;
@@ -98,7 +94,25 @@ html {
     border-radius: 10px;
 }
 
-.UserScore {
+.Audio {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        ". . . ."
+        ". AudioIcon AudioIcon ."
+        ". AudioIcon AudioIcon ."
+        ". . . .";
+    grid-area: Audio;
+}
+
+.AudioIcon {
+    grid-area: AudioIcon;
+}
+
+.Home {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -109,9 +123,11 @@ html {
         ". HomeIcon HomeIcon ."
         ". HomeIcon HomeIcon ."
         ". . . .";
-    grid-area: UserScore;
-    height: 15px;
-    margin: 10px;
+    grid-area: Home;
+}
+
+.HomeIcon {
+    grid-area: HomeIcon;
 }
 
 .Timer {
@@ -130,8 +146,6 @@ html {
 
 .TimerIcon {
     grid-area: TimerIcon;
-    margin-left: -550px;
-    transform: scale(1.5);
 }/*
 ul{
     padding: 0;
