--- a/frontend/src/Pages/RoundResultsPage/index.css
+++ b/frontend/src/Pages/RoundResultsPage/index.css
@@ -1,6 +1,6 @@
 .page-container {
     padding: 0px;
-    margin: auto;
+    margin: 0px;
     top: 0px;
     left: 0px;
     right: 0px;
@@ -8,7 +8,6 @@
     bottom: 0px;
     position: absolute;
     opacity: 0.99;
-    width: 90vw;
 
 }
 
@@ -19,54 +18,55 @@
 .first-place {
     display:flex;
     background: linear-gradient(to right, #ffc219, rgb(197, 167, 84), rgb(66, 55, 55));
-    /* width: 97.5%; */
-    height: 27%;
+    width: 97.5%;
+    height: 30vh;
     margin-left: 5vh;
     border-radius: 20px;
-    
-    box-shadow:  0px 0px 10px rgba(0, 0, 0, 0.7);
-    z-index: 1 !important;
+    box-shadow: 80px, 80px yellow;
 }
 
 .second-place {
     display:flex;
     background: linear-gradient(to right, #CCCCCC, rgb(158, 137, 137), rgb(66, 55, 55));
-    
-    /* width: 80%; */
-    height: 25%;
-    margin-left: 25%;
+    width: 80%;
+    height: 26vh;
+    margin-left: 40vh;
+    opacity: 95%;
     z-index: 0 !important;
-    box-shadow:  0px 0px 10px rgba(0, 0, 0, 0.7);
+    
     border-radius: 20px;
 }
 
 .third-place {
     display:flex;
     background: linear-gradient(to right, #e8a240,rgb(113, 87, 53), rgb(94, 99, 85));
-    /* width: 100%; */
-    height: 22%;
-    margin-left: 45%;
+    width: 100%;
+    height: 22vh;
+    margin-left: 70vh;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
     z-index: -2 !important;
     border-radius: 20px;
-    float: left;
-    box-shadow:  0px 0px 10px rgba(0, 0, 0, 0.7);
+    
 }
 
 .first-medal {
     scale: 0.5;
     opacity: 100%;
+    margin-left: 10vh;
     float:left;
 }
 
 .second-medal {
     scale: 0.5;
     opacity: 100%;
+    margin-left: 10vh;
     float:left;
 }
 
 .third-medal {
     scale: 0.5;
     opacity: 100%;
+    margin-left: 10vh;
     float:left;
 }
 
@@ -79,32 +79,15 @@
 
 .second-image {
     padding: 40px; 
-    padding-top: 60px;
 }
 
 .third-image {
     padding: 40px; 
-    
 }
 
 p {
     align-self: center;
     margin-left: 10vh;
     
-}
-.timer {
-    float: right;
-    margin-top: 30px;
-}
-
-.user {
-    float: left;
-    margin-top: 30px;
-}
-
-.score-details {
-    margin-top: auto;
-    margin-bottom: auto;
-    float: left;
 }
 
