--- a/frontend/src/Pages/GamePage/index.css
+++ b/frontend/src/Pages/GamePage/index.css
@@ -1,4 +1,3 @@
-
 body,
 html {
     margin: 0;
@@ -6,7 +5,7 @@ html {
     height: 100%;
 }
 
-.page {
+.game-page-container {
     top:0;
     left:0;
     right:0;
@@ -18,7 +17,7 @@ html {
     gap: 10px 10px;
     grid-auto-flow: row;
     grid-template-areas:
-        "Home . . . . . Audio"
+        "UserScore . . . . . Audio"
         ". . . RoundHeader . . ."
         ". RoundImage RoundImage RoundImage Chatbox Chatbox ."
         ". RoundImage RoundImage RoundImage Chatbox Chatbox ."
@@ -27,14 +26,14 @@ html {
     
 }
 
-.RoundImage {
+.RoundImage {   
     grid-area: RoundImage;
 }
 
-img {
-    width: "100px";
-    height: "100px";
-    border-Radius: "10px"
+.RoundImage img{
+    margin-left: 230px;
+    border-Radius: 25px;
+    border: 10px solid #6E8AA8;
 }
 
 .Chatbox {
@@ -66,6 +65,10 @@ img {
 
 .PromptInput {
     grid-area: PromptInput;
+    justify-content: center;
+    align-items: center;
+    padding-top: 500px;
+    margin-top: 50px;
 }
 
 .Button {
@@ -73,18 +76,18 @@ img {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 0px 0px;
-    grid-auto-flow: row;
+    grid-auto-flow: column;
     grid-template-areas:
         "GuessButton GuessButton GuessButton"
         ". . ."
         ". . .";
     grid-area: Button;
-}
+    justify-content: center;
+    align-items: center;
+}   
 
-.GuessButton {
-    grid-area: GuessButton;
-}
 
+.GuessButton,
 .SubmitButton {
     display: flex;
     align-items: center;
@@ -94,25 +97,7 @@ img {
     border-radius: 10px;
 }
 
-.Audio {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-        ". . . ."
-        ". AudioIcon AudioIcon ."
-        ". AudioIcon AudioIcon ."
-        ". . . .";
-    grid-area: Audio;
-}
-
-.AudioIcon {
-    grid-area: AudioIcon;
-}
-
-.Home {
+.UserScore {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -123,11 +108,9 @@ img {
         ". HomeIcon HomeIcon ."
         ". HomeIcon HomeIcon ."
         ". . . .";
-    grid-area: Home;
-}
-
-.HomeIcon {
-    grid-area: HomeIcon;
+    grid-area: UserScore;
+    height: 15px;
+    margin: 10px;
 }
 
 .Timer {
@@ -146,6 +129,8 @@ img {
 
 .TimerIcon {
     grid-area: TimerIcon;
+    margin-left: -550px;
+    transform: scale(1.5);
 }/*
 ul{
     padding: 0;
